
    <menu xmlns:android="http://schemas.android.com/apk/res/android">
        
        <item android:id="@+id/progress"
          android:showAsAction="ifRoom" />
        
        <item android:id="@+id/action_send_now"
          android:icon="@drawable/ic_action_send_now"
          android:title="Send"
          android:showAsAction="ifRoom" />
        
        <item
        android:id="@+id/refresh"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/refresh"/>
        
        <item
        android:id="@+id/select_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/select_all"/>
        
        <item
        android:id="@+id/unselect_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/unselect_all"/>
        
    </menu>
