<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    
    <LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:clickable="true"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="20dp"
	    >
	<!-- 	<EditText
		    android:id="@+id/username"
		    android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:hint="@string/username_hint"
		    android:inputType="textEmailAddress" />
		<EditText
		    android:id="@+id/password"
		    android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:hint="@string/password_hint"
		    android:inputType="textPassword" /> -->
		<EditText
		    android:id="@+id/phone_number"
		    android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:hint="@string/phone_number"
		    android:inputType="phone" />
		<EditText
		    android:id="@+id/display_name"
		    android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:hint="@string/display_name"
		    android:inputType="text" />    
		<TextView
	        android:id="@+id/login_button"
	        android:layout_width="250dp"
	        android:layout_height="50dp"
	        android:gravity="center"
	        android:background="#FF0000FF"
	        android:textColor="#FFFFFFFF"
	        android:text="@string/register" />
		
		<TextView
	        android:id="@+id/signup_button"
	        android:layout_width="250dp"
	        android:layout_height="50dp"
	        android:gravity="center"
	        android:background="#FFFF0000"
	        android:textColor="#FFFFFFFF"
	        android:text="@string/sign_up_here" />
	</LinearLayout>
	        
    <TextView
	        android:id="@+id/about_blinkit"
	        android:layout_width="250dp"
	        android:layout_height="50dp"
	        android:gravity="center"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			android:layout_marginBottom="50dp"
	        android:text="@string/about_blinkit" /> 
    
</RelativeLayout>
